<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.edu.udea.compumovil.gr02_20172.lab1.SignUpActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_register"
        android:textSize="35dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/title"
        android:layout_marginLeft="25dp"  />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_above="@+id/first_name"
        android:layout_alignRight="@+id/genderRadio"
        android:layout_alignEnd="@+id/genderRadio" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textCapWords|textNoSuggestions"
        android:hint="@string/last_name"
        android:layout_below="@+id/first_name"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="120dp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textCapWords|textNoSuggestions"
        android:hint="@string/first_name"
        android:layout_below="@+id/photo"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="120dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/last_name"
        android:orientation="horizontal"
        android:id="@+id/genderRadio">

        <RadioButton
            android:id="@+id/radio_men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/radio_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

    </RadioGroup>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_marginTop="30dp"
        android:textSize="18dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/genderRadio"
        android:layout_marginLeft="25dp"/>

   <!-- <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></DatePicker>-->

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        android:layout_below="@+id/birthday"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="120dp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/address"
        android:layout_below="@+id/phone"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="120dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_below="@+id/address"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="120dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/email"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="120dp"/>

    <AutoCompleteTextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textAutoComplete"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="120dp"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="23dp"
        android:layout_below="@id/city"
        android:layout_centerHorizontal="true" />


</RelativeLayout>

</ScrollView>